--- a/prc_site_mockup_final.html
+++ b/prc_site_mockup_final.html
@@ -8,6 +8,12 @@
 *{margin:0;padding:0;box-sizing:border-box}
 html{scroll-behavior:smooth}
 body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;color:#1a1a2e;background:#fff;-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased}
+h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-title{font-family:Georgia,"Times New Roman",Times,serif}
+@keyframes fadeUp{from{opacity:0;transform:translateY(30px)}to{opacity:1;transform:translateY(0)}}
+@keyframes fadeUpDelay1{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
+@keyframes fadeUpDelay2{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
+.animate-in{opacity:0;transform:translateY(20px);transition:opacity 0.6s ease-out,transform 0.6s ease-out}
+.animate-in.visible{opacity:1;transform:translateY(0)}
 .site-header{position:sticky;top:0;z-index:200;background:#fff;border-bottom:1px solid #e5e7eb;padding:12px 20px;display:flex;align-items:center;justify-content:space-between}
 .header-brand{display:flex;flex-direction:column}
 .header-title{font-size:1.2rem;font-weight:800;color:#0A1628;letter-spacing:-0.5px;line-height:1.2}
@@ -16,23 +22,23 @@ body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Ar
 .header-nav label,.header-nav a{font-size:0.82rem;color:#64748b;text-decoration:none;cursor:pointer;font-weight:500;padding:4px 0;border-bottom:2px solid transparent;transition:color 0.15s}
 .header-nav label:hover,.header-nav a:hover{color:#0A1628}
 @media(max-width:640px){.header-nav{display:none}}
-.hero{background:#0A1628;padding:48px 20px 40px;text-align:center}
-.hero-title{font-size:2rem;font-weight:900;color:#fff;letter-spacing:-0.5px;line-height:1.1}
-.hero-auth{font-size:0.75rem;color:rgba(255,255,255,0.5);text-transform:uppercase;letter-spacing:3px;margin-top:8px;font-weight:500}
-.hero-sub{font-size:0.85rem;color:rgba(255,255,255,0.65);margin-top:16px;line-height:1.5;max-width:560px;margin-left:auto;margin-right:auto}
-.hero-stats{display:flex;justify-content:center;gap:8px;flex-wrap:wrap;margin-top:20px;font-size:0.72rem;color:rgba(255,255,255,0.5);font-weight:500}
+.hero{background:linear-gradient(135deg,#0A1628 0%,#06B6D4 100%);padding:48px 20px 40px;text-align:center}
+.hero-title{font-size:2rem;font-weight:900;color:#fff;letter-spacing:-0.5px;line-height:1.1;animation:fadeUp 0.8s ease-out}
+.hero-auth{font-size:0.75rem;color:rgba(255,255,255,0.5);text-transform:uppercase;letter-spacing:3px;margin-top:8px;font-weight:500;animation:fadeUpDelay1 0.8s ease-out 0.2s backwards}
+.hero-sub{font-size:0.85rem;color:rgba(255,255,255,0.65);margin-top:16px;line-height:1.5;max-width:560px;margin-left:auto;margin-right:auto;animation:fadeUpDelay1 0.8s ease-out 0.3s backwards}
+.hero-stats{display:flex;justify-content:center;gap:8px;flex-wrap:wrap;margin-top:20px;font-size:0.72rem;color:rgba(255,255,255,0.5);font-weight:500;animation:fadeUpDelay2 0.8s ease-out 0.4s backwards}
 .hero-stats span{background:rgba(255,255,255,0.06);padding:5px 12px;border-radius:20px}
 .hero-stats strong{color:rgba(255,255,255,0.85)}
-.hero-btns{margin-top:24px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap}
-.btn-primary{background:#2B7DE9;color:#fff;border:none;padding:10px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none}
-.btn-outline{background:transparent;color:#fff;border:1.5px solid rgba(255,255,255,0.3);padding:10px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none}
-.btn-primary:hover{background:#1D6AD4}
-.btn-outline:hover{border-color:#fff}
+.hero-btns{margin-top:24px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap;animation:fadeUpDelay2 0.8s ease-out 0.5s backwards}
+.btn-primary{background:#2B7DE9;color:#fff;border:none;padding:10px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,box-shadow 0.2s ease,background 0.2s ease}
+.btn-outline{background:transparent;color:#fff;border:1.5px solid rgba(255,255,255,0.3);padding:10px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,border-color 0.2s ease}
+.btn-primary:hover{background:#1D6AD4;transform:scale(1.05);box-shadow:0 4px 12px rgba(43,125,233,0.3)}
+.btn-outline:hover{border-color:#fff;transform:scale(1.05)}
 @media(max-width:640px){.hero{padding:32px 16px 28px}.hero-title{font-size:1.5rem}}
 .trust-bar{background:#f8f9fa;padding:10px 20px;text-align:center;font-size:0.72rem;color:#64748b;font-weight:500;letter-spacing:0.3px;border-bottom:1px solid #e5e7eb}
 .tab-radio{display:none}
 .tab-bar{position:sticky;top:49px;z-index:150;background:#fff;border-bottom:1px solid #e5e7eb;display:flex;justify-content:center;gap:0}
-.tab-bar label{padding:12px 20px;font-size:0.82rem;font-weight:600;color:#64748b;cursor:pointer;border-bottom:2.5px solid transparent;transition:all 0.15s}
+.tab-bar label{padding:12px 20px;font-size:0.82rem;font-weight:600;color:#64748b;cursor:pointer;border-bottom:2.5px solid transparent;transition:color 0.3s ease,border-bottom-color 0.3s ease}
 .tab-bar label:hover{color:#0A1628}
 #tab-resources:checked ~ .tab-bar label[for="tab-resources"],#tab-vendors:checked ~ .tab-bar label[for="tab-vendors"],#tab-shop:checked ~ .tab-bar label[for="tab-shop"],#tab-learn:checked ~ .tab-bar label[for="tab-learn"],#tab-contact:checked ~ .tab-bar label[for="tab-contact"]{color:#2B7DE9;border-bottom-color:#2B7DE9}
 .tab-content{display:none}
@@ -44,14 +50,15 @@ body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Ar
 @media(max-width:640px){.tab-bar label{padding:10px 14px;font-size:0.75rem}}
 .content-wrap{max-width:1100px;margin:0 auto;padding:32px 20px}
 @media(max-width:640px){.content-wrap{padding:20px 16px}}
-.res-banner{background:linear-gradient(135deg,#0A1628 0%,#1a2744 100%);border-radius:12px;padding:28px 24px;color:#fff;margin-bottom:28px}
+.res-banner{background:linear-gradient(135deg,#0A1628 0%,#06B6D4 100%);border-radius:12px;padding:28px 24px;color:#fff;margin-bottom:28px;background-size:200% 200%;animation:shimmer 8s ease infinite}
+@keyframes shimmer{0%,100%{background-position:0% 50%}50%{background-position:100% 50%}}
 .res-banner h3{font-size:1.1rem;font-weight:800;margin-bottom:6px}
 .res-banner p{font-size:0.8rem;color:rgba(255,255,255,0.7);margin-bottom:16px;line-height:1.5}
 .res-banner .btn-primary{font-size:0.78rem;padding:8px 20px}
 .quick-grid{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-bottom:32px}
 @media(min-width:768px){.quick-grid{grid-template-columns:1fr 1fr 1fr 1fr}}
-.quick-tile{background:#f8f9fa;border:1px solid #e5e7eb;border-radius:10px;padding:16px;text-align:center;cursor:pointer;text-decoration:none;color:#1a1a2e;transition:all 0.15s}
-.quick-tile:hover{border-color:#2B7DE9;background:#f0f7ff}
+.quick-tile{background:#f8f9fa;border:1px solid #e5e7eb;border-radius:10px;padding:16px;text-align:center;cursor:pointer;text-decoration:none;color:#1a1a2e;transition:all 0.3s ease}
+.quick-tile:hover{border-color:#2B7DE9;background:#f0f7ff;transform:translateY(-4px);box-shadow:0 6px 20px rgba(43,125,233,0.15)}
 .quick-tile h4{font-size:0.78rem;font-weight:700;margin-bottom:2px}
 .quick-tile p{font-size:0.65rem;color:#64748b}
 .res-section{margin-bottom:28px}
@@ -137,13 +144,15 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 .footer-brand{font-size:0.85rem;font-weight:700;color:#fff;margin-bottom:2px}
 .footer-sub{font-size:0.6rem;color:rgba(255,255,255,0.4);text-transform:uppercase;letter-spacing:2px;margin-bottom:16px}
 .footer-links{display:flex;gap:20px;justify-content:center;margin-bottom:16px}
-.footer-links label{font-size:0.75rem;color:rgba(255,255,255,0.5);cursor:pointer}
+.footer-links label{font-size:0.75rem;color:rgba(255,255,255,0.5);cursor:pointer;position:relative;transition:color 0.3s ease}
 .footer-links label:hover{color:#fff}
+.footer-links label::after{content:'';position:absolute;bottom:-2px;left:0;width:0;height:1px;background:#fff;transition:width 0.3s ease}
+.footer-links label:hover::after{width:100%}
 .footer-disc{font-size:0.65rem;color:rgba(255,255,255,0.3);max-width:500px;margin:0 auto;line-height:1.5}
 .footer-copy{font-size:0.62rem;color:rgba(255,255,255,0.25);margin-top:12px}
 
 .calc-section{margin-top:24px;border-radius:12px;border:1px solid #e5e7eb;overflow:hidden}
-.calc-header{background:linear-gradient(135deg,#0A1628 0%,#1a2744 100%);padding:20px 24px}
+.calc-header{background:linear-gradient(135deg,#0A1628 0%,#06B6D4 100%);padding:20px 24px;background-size:200% 200%;animation:shimmer 8s ease infinite}
 .calc-title{font-size:1rem;font-weight:800;color:#fff;margin-bottom:4px}
 .calc-subtitle{font-size:0.75rem;color:rgba(255,255,255,0.6);line-height:1.4}
 .calc-body{padding:24px;background:#fff}
@@ -219,6 +228,28 @@ function calcRecon() {
   summary.style.display = "block";
   summary.innerHTML = "<strong>Summary:</strong> Add " + water + " mL of bacteriostatic water to your " + pep + " mg vial. For a " + dose + " mcg dose, draw <strong>" + volUnits.toFixed(1) + " units</strong> (" + volMl.toFixed(3) + " mL) on your insulin syringe. This vial gives you <strong>" + totalDoses + " doses</strong> and lasts <strong>" + days + " day" + (days !== 1 ? "s" : "") + "</strong>.";
 }
+
+function observeScrollAnimations() {
+  var elementsToAnimate = document.querySelectorAll('.animate-in');
+  function checkVisibility() {
+    for (var i = 0; i < elementsToAnimate.length; i++) {
+      var element = elementsToAnimate[i];
+      var rect = element.getBoundingClientRect();
+      var windowHeight = window.innerHeight || document.documentElement.clientHeight;
+      if (rect.top <= windowHeight * 0.85 && rect.bottom >= 0) {
+        element.classList.add('visible');
+      }
+    }
+  }
+  window.addEventListener('scroll', checkVisibility);
+  window.addEventListener('load', checkVisibility);
+  checkVisibility();
+}
+if (document.readyState === 'loading') {
+  document.addEventListener('DOMContentLoaded', observeScrollAnimations);
+} else {
+  observeScrollAnimations();
+}
 </script>
 </head>
 <body>
@@ -273,21 +304,21 @@ function calcRecon() {
 
 <div class="tab-content content-resources" id="tc-resources">
 <div class="content-wrap">
-<div class="res-banner">
+<div class="res-banner animate-in">
 <h3>Price Comparison Tool</h3>
 <p>Compare prices across 387 products from 23+ verified vendors. Find the best value for your research needs.</p>
 <a href="https://frabrizio22.github.io/prc-tools/" class="btn-primary" target="_blank" rel="noopener">Launch Price Tool</a>
 </div>
 
 <div class="quick-grid">
-<label for="tab-vendors" class="quick-tile"><h4>Vendor Directory</h4><p>393 vendors reviewed</p></label>
-<label for="tab-learn" class="quick-tile"><h4>Peptide Education</h4><p>Learn the science</p></label>
-<a href="#review-resources" class="quick-tile" onclick="document.getElementById('review-resources').scrollIntoView({behavior:'smooth'});return false"><h4>Vendor Reviews</h4><p>Community feedback</p></a>
-<a href="#peptide-calc" class="quick-tile" onclick="document.getElementById('peptide-calc').scrollIntoView({behavior:'smooth'});return false"><h4>Peptide Calculator</h4><p>Reconstitution tool</p></a>
-<a href="#testing-labs" class="quick-tile" onclick="document.getElementById('testing-labs').scrollIntoView({behavior:'smooth'});return false"><h4>Testing Labs</h4><p>Third-party analysis</p></a>
+<label for="tab-vendors" class="quick-tile animate-in"><h4>Vendor Directory</h4><p>393 vendors reviewed</p></label>
+<label for="tab-learn" class="quick-tile animate-in"><h4>Peptide Education</h4><p>Learn the science</p></label>
+<a href="#review-resources" class="quick-tile animate-in" onclick="document.getElementById('review-resources').scrollIntoView({behavior:'smooth'});return false"><h4>Vendor Reviews</h4><p>Community feedback</p></a>
+<a href="#peptide-calc" class="quick-tile animate-in" onclick="document.getElementById('peptide-calc').scrollIntoView({behavior:'smooth'});return false"><h4>Peptide Calculator</h4><p>Reconstitution tool</p></a>
+<a href="#testing-labs" class="quick-tile animate-in" onclick="document.getElementById('testing-labs').scrollIntoView({behavior:'smooth'});return false"><h4>Testing Labs</h4><p>Third-party analysis</p></a>
 </div>
 
-<div class="calc-section" id="peptide-calc">
+<div class="calc-section animate-in" id="peptide-calc">
 <div class="calc-header">
 <div class="calc-title">Reconstitution Calculator</div>
 <div class="calc-subtitle">Calculate the correct volume to draw for your desired dose after reconstituting a peptide vial.</div>
@@ -341,7 +372,7 @@ function calcRecon() {
 </div>
 </div>
 
-<div class="res-section" id="review-resources">
+<div class="res-section animate-in" id="review-resources">
 <h3>Where to Find Vendor Reviews</h3>
 <p style="margin-bottom:12px">Before purchasing from any vendor, check these community resources for real user feedback and independent testing results.</p>
 <div style="display:flex;flex-direction:column;gap:12px">
@@ -364,7 +395,7 @@ function calcRecon() {
 </div>
 </div>
 
-<div class="res-section" id="testing-labs">
+<div class="res-section animate-in" id="testing-labs">
 <h3>Third-Party Testing Laboratories</h3>
 <p style="margin-bottom:12px">Independent labs that test peptide purity, identity, and sterility. Sending samples for third-party verification is the gold standard for ensuring product quality.</p>
 <div style="display:flex;flex-direction:column;gap:12px">
@@ -383,7 +414,7 @@ function calcRecon() {
 </div>
 </div>
 
-<div class="res-section">
+<div class="res-section animate-in">
 <h3>Books &amp; Further Reading</h3>
 <p style="margin-bottom:12px">Essential references for understanding peptide science, research methodology, and drug development.</p>
 <div style="display:flex;flex-direction:column;gap:10px">
