--- a/site.html
+++ b/site.html
@@ -22,7 +22,7 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .header-nav label,.header-nav a{font-size:0.82rem;color:#64748b;text-decoration:none;cursor:pointer;font-weight:500;padding:4px 0;border-bottom:2px solid transparent;transition:color 0.15s}
 .header-nav label:hover,.header-nav a:hover{color:#0A1628}
 @media(max-width:640px){.header-nav{display:none}}
-.hero{background:linear-gradient(135deg,#0A1628 0%,#06B6D4 100%);padding:48px 20px 40px;text-align:center}
+.hero{background:linear-gradient(135deg,#2563EB 0%,#3B82F6 50%,#60A5FA 100%);padding:48px 20px 40px;text-align:center}
 .hero-title{font-size:2rem;font-weight:900;color:#fff;letter-spacing:-0.5px;line-height:1.1;animation:fadeUp 0.8s ease-out}
 .hero-auth{font-size:0.75rem;color:rgba(255,255,255,0.5);text-transform:uppercase;letter-spacing:3px;margin-top:8px;font-weight:500;animation:fadeUpDelay1 0.8s ease-out 0.2s backwards}
 .hero-sub{font-size:0.85rem;color:rgba(255,255,255,0.65);margin-top:16px;line-height:1.5;max-width:560px;margin-left:auto;margin-right:auto;animation:fadeUpDelay1 0.8s ease-out 0.3s backwards}
@@ -50,7 +50,7 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 @media(max-width:640px){.tab-bar label{padding:10px 14px;font-size:0.75rem}}
 .content-wrap{max-width:1100px;margin:0 auto;padding:32px 20px}
 @media(max-width:640px){.content-wrap{padding:20px 16px}}
-.res-banner{background:linear-gradient(135deg,#0A1628 0%,#06B6D4 100%);border-radius:12px;padding:28px 24px;color:#fff;margin-bottom:28px;background-size:200% 200%;animation:shimmer 8s ease infinite}
+.res-banner{background:linear-gradient(135deg,#2563EB 0%,#3B82F6 50%,#60A5FA 100%);border-radius:12px;padding:28px 24px;color:#fff;margin-bottom:28px;background-size:200% 200%;animation:shimmer 8s ease infinite}
 @keyframes shimmer{0%,100%{background-position:0% 50%}50%{background-position:100% 50%}}
 .res-banner h3{font-size:1.1rem;font-weight:800;margin-bottom:6px}
 .res-banner p{font-size:0.8rem;color:rgba(255,255,255,0.7);margin-bottom:16px;line-height:1.5}
@@ -99,7 +99,7 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .pills-row{display:flex;gap:6px;overflow-x:auto;padding:0 0 12px;-webkit-overflow-scrolling:touch}
 .pills-row::-webkit-scrollbar{height:0}
 .pill{display:inline-block;padding:6px 14px;border-radius:20px;font-size:0.7rem;font-weight:600;border:1.5px solid #e5e7eb;background:#fff;color:#64748b;cursor:pointer;white-space:nowrap;font-family:inherit;transition:all 0.15s}
-.pill:hover,.pill.active{background:#0A1628;color:#fff;border-color:#0A1628}
+.pill:hover,.pill.active{background:#1E3A8A;color:#fff;border-color:#0A1628}
 .search-row{display:flex;align-items:center;gap:12px;margin:16px 0}
 .search-input{flex:1;padding:10px 14px;border:1.5px solid #e5e7eb;border-radius:8px;font-size:0.82rem;font-family:inherit;background:#f8f9fa}
 .search-input:focus{outline:none;border-color:#2B7DE9;background:#fff}
@@ -140,7 +140,7 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .contact-wrap a{color:#2B7DE9;text-decoration:none;font-weight:600}
 .contact-wrap a:hover{text-decoration:underline}
 .contact-disc{font-size:0.72rem;color:#94a3b8;margin-top:28px;padding-top:20px;border-top:1px solid #e5e7eb;line-height:1.5}
-footer{background:#0A1628;padding:32px 20px;text-align:center}
+footer{background:#1E3A8A;padding:32px 20px;text-align:center}
 .footer-brand{font-size:0.85rem;font-weight:700;color:#fff;margin-bottom:2px}
 .footer-sub{font-size:0.6rem;color:rgba(255,255,255,0.4);text-transform:uppercase;letter-spacing:2px;margin-bottom:16px}
 .footer-links{display:flex;gap:20px;justify-content:center;margin-bottom:16px}
@@ -152,7 +152,7 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 .footer-copy{font-size:0.62rem;color:rgba(255,255,255,0.25);margin-top:12px}
 
 .calc-section{margin-top:24px;border-radius:12px;border:1px solid #e5e7eb;overflow:hidden}
-.calc-header{background:linear-gradient(135deg,#0A1628 0%,#06B6D4 100%);padding:20px 24px;background-size:200% 200%;animation:shimmer 8s ease infinite}
+.calc-header{background:linear-gradient(135deg,#2563EB 0%,#3B82F6 50%,#60A5FA 100%);padding:20px 24px;background-size:200% 200%;animation:shimmer 8s ease infinite}
 .calc-title{font-size:1rem;font-weight:800;color:#fff;margin-bottom:4px}
 .calc-subtitle{font-size:0.75rem;color:rgba(255,255,255,0.6);line-height:1.4}
 .calc-body{padding:24px;background:#fff}
@@ -465,7 +465,7 @@ if (document.readyState === 'loading') {
 <input type="text" class="vendor-search" id="vendorSearch" placeholder="Search vendors...">
 <div class="vendor-count" id="vendorCount">Showing 393 vendors</div>
 </div>
-<div style="background:linear-gradient(135deg,#0A1628 0%,#1a2744 100%);border-radius:10px;padding:20px;margin-bottom:16px;display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:12px">
+<div style="background:linear-gradient(135deg,#1D4ED8 0%,#3B82F6 100%);border-radius:10px;padding:20px;margin-bottom:16px;display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:12px">
 <div>
 <div style="font-size:0.85rem;font-weight:800;color:#fff">Peptide Resource Center</div>
 <div style="font-size:0.72rem;color:rgba(255,255,255,0.6);margin-top:4px">44+ research peptides · ≥98% purity · Fast shipping</div>
